--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,31 +10,79 @@
 </head>
 
 <body>
+<div class="container">
+    <h1>Каталог</h1>
     <div class="container">
-        <h1>Каталог</h1>
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>Название</th>
-                <th>Категория</th>
-                <th>Цена</th>
-                <th>Действия</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="p : ${products}">
-                <td th:text="${p.id}"/>
-                <td th:text="${p.title}"/>
-                <td th:text="${p.category.getTitle}"/>
-                <td th:text="${p.price}"/>
-                <td>
-                    <a class="btn btn-danger" th:href="@{'/products/delete/' + ${p.id}}">Удалить запись</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <a th:href="@{/products/add}" class="btn btn-primary">Добавить новый товар</a>
+        <h3>Фильтры</h3>
+
+        <form method="POST" th:action="@{/products/priceFilter}">
+
+            <h4>По ценам</h4>
+            <div class="row">
+                <div class="col">
+                    <label for="lowerPrice" class="form-label">От</label>
+                    <input type="number" class="form-control" id="lowerPrice" name="lowerPrice">
+                </div>
+                <div class="col">
+                    <label for="upperPrice" class="form-label">До</label>
+                    <input type="number" class="form-control" id="upperPrice" name="upperPrice">
+                </div>
+            </div>
+            <br>
+                <button type="submit" class="btn btn-primary" >Фильтровать</button>
+            <br>
+        </form>
     </div>
+    <div>
+        <form method="POST" th:action="@{/products/titleFilter}">
+            <h4>По наименованию</h4>
+            <div class="row">
+                <div class="col">
+                    <label for="title" class="form-label">Наименование товара</label>
+                    <input type="text" class="form-control" id="title" name="title">
+                </div>
+                <button type="submit" class="btn btn-primary" >Фильтровать</button>
+            </div>
+        </form>
+    </div>
+
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Название</th>
+            <th>Цена</th>
+            <th>Категория</th>
+            <th>Действия</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="p : ${page.getContent()}">
+            <td th:text="${p.id}"/>
+            <td>
+                <a th:text="${p.title}" th:href="@{'/products/' + ${p.id}}"></a>
+            </td>
+            <td>
+                <span th:text="${p.price}"/>
+                <a class="btn btn-primary" th:href="@{'/products/' + ${p.id} + '/price/inc'}">+</a>
+            </td>
+            <td th:text="${p.category.title}"/>
+            <td>
+                <a class="btn btn-danger" th:href="@{'/products/delete/' + ${p.id}}">Удалить запись</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <nav aria-label="Page navigation" th:if="${page.getTotalPages() > 1}">
+        <ul class="pagination">
+            <li class="page-item" th:each="i : ${#numbers.sequence(1, page.getTotalPages())}">
+                <a th:class="page-link" th:text="${i}" th:href="@{'/?p=' + ${i}}"></a>
+            </li>
+        </ul>
+    </nav>
+
+    <a th:href="@{/products/add}" class="btn btn-primary">Добавить новый товар</a>
+</div>
 </body>
 </html>
